--- a/cart.html
+++ b/cart.html
@@ -42,7 +42,7 @@
             </li>
 
             <li class="nav_list">
-                <a href="profile.html" class="nav_link"><img src="profile1.png" alt="" class="profile-icon"></a>
+                <a href="profile.html" class="nav_link"><img src="Image/profile1.png" alt="" class="profile-icon"></a>
             </li>
         </ul>
 
@@ -76,7 +76,7 @@
 
             <div class="cart-item card flex-space-around">
                 <input type="checkbox">
-                <img src="img-1.jpg" alt="product1" class="cart-item-img">
+                <img src="Image/img-1.jpg" alt="product1" class="cart-item-img">
                 <div class="cart-item-description">
                     <h3 class="product-name">Sony V-4 Headphone</h3>
                     <h4 class="product-price">Price: $225.99</h4>
@@ -94,7 +94,7 @@
 
             <div class="cart-item card flex-space-around">
                 <input type="checkbox">
-                <img src="img-5.jpg" alt="product4" class="cart-item-img">
+                <img src="Image/img-5.jpg" alt="product4" class="cart-item-img">
                 <div class="cart-item-description">
                     <h3 class="product-name">Nike Shoes</h3>
                     <h4 class="product-price">Price: $125.99</h4>
