--- a/profile.html
+++ b/profile.html
@@ -42,7 +42,7 @@
             </li>
 
             <li class="nav_list">
-                <a href="profile.html" class="nav_link"><img src="profile1.png" alt="" class="profile-icon"></a>
+                <a href="profile.html" class="nav_link"><img src="Image/profile1.png" alt="" class="profile-icon"></a>
             </li>
         </ul>
 
@@ -64,9 +64,9 @@
        <section class="profile flex-center">
         <h2 class="section-title text-center">User profile</h2>
         <div class="flex-center card">
-            <img src="profile1.png" alt="profile" class="profile-img">
+            <img src="Image/profile1.png" alt="profile" class="profile-img">
             <h2 class="profile-name">Arifa Jannat</h2>
-            <p class="profile-email">arifa952427@gmail.com</p>
+            <p class="profile-email">arifajannat9527@gmail.com</p>
             <p class="profile-about">I love reading book, gardening and travelling. </p>
             <div class="profile-buttons">
                 <button class="btn profile-edit-btn">
