--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
             </li>
 
             <li class="nav_list">
-                <a href="profile.html" class="nav_link"><img src="profile1.png" alt="" class="profile-icon"></a>
+                <a href="profile.html" class="nav_link"><img src="Image/profile1.png" alt="" class="profile-icon"></a>
             </li>
         </ul>
 
