--- a/product.html
+++ b/product.html
@@ -42,7 +42,7 @@
             </li>
 
             <li class="nav_list">
-                <a href="profile.html" class="nav_link"><img src="profile1.png" alt="" class="profile-icon"></a>
+                <a href="profile.html" class="nav_link"><img src="Image/profile1.png" alt="" class="profile-icon"></a>
             </li>
         </ul>
 
@@ -67,7 +67,7 @@
 
                 <div class="product-all-details">
                     <div class="product-details-left flex-center">
-                        <img src="img-1.jpg" alt="product1">
+                        <img src="Image/img-1.jpg" alt="product1">
                     </div>
                     <div class="product-details-right">
                         <h3 class="product-name">Sony V-4 Headphone</h3>
@@ -95,7 +95,7 @@
 
                 <div class="product-all-details">
                     <div class="product-details-left flex-center">
-                        <img src="img-2.jpg" alt="product1">
+                        <img src="Image/img-2.jpg" alt="product1">
                     </div>
                     <div class="product-details-right">
                         <h3 class="product-name">Apple Smart Watch</h3>
@@ -123,7 +123,7 @@
 
                 <div class="product-all-details">
                     <div class="product-details-left flex-center">
-                        <img src="img-3.jpg" alt="product1">
+                        <img src="Image/img-3.jpg" alt="product1">
                     </div>
                     <div class="product-details-right">
                         <h3 class="product-name">Apple Smart sunglass</h3>
@@ -150,7 +150,7 @@
 
                 <div class="product-all-details">
                     <div class="product-details-left flex-center">
-                        <img src="img-4.jpg" alt="product1">
+                        <img src="Image/img-4.jpg" alt="product1">
                     </div>
                     <div class="product-details-right">
                         <h3 class="product-name">Nike Watch</h3>
@@ -178,7 +178,7 @@
 
                 <div class="product-all-details">
                     <div class="product-details-left flex-center">
-                        <img src="img-5.jpg" alt="product1">
+                        <img src="Image/img-5.jpg" alt="product1">
                     </div>
                     <div class="product-details-right">
                         <h3 class="product-name">Nike shoes</h3>
@@ -206,7 +206,7 @@
 
                 <div class="product-all-details">
                     <div class="product-details-left flex-center">
-                        <img src="img-6.jpg" alt="product1">
+                        <img src="Image/img-6.jpg" alt="product1">
                     </div>
                     <div class="product-details-right">
                         <h3 class="product-name">Canon Camera</h3>
